# ambulatory-voice-clustering

./: .env.example  .gitignore  Makefile  README.md  environment.gpu.yml  pyproject.toml  requirements.txt
config/: default.yaml
data/: SCHEMA.md
notebooks/: 01_exploration.ipynb  02_embedding_analysis.ipynb  README.md
scripts/: make_sample_dataset.py  run_clustering.py  run_features.py  run_ingest.py  run_validation.py
src/voice_clustering/: __init__.py  cli.py  config.py
src/voice_clustering/data/: __init__.py  ingest.py  schema.py
src/voice_clustering/evaluation/: __init__.py  metrics.py  preservation.py  search.py
src/voice_clustering/features/: __init__.py  filters.py  subsequences.py
src/voice_clustering/models/: __init__.py  backend.py  clusterer.py  pipeline.py  reducer.py
src/voice_clustering/utils/: __init__.py  gpu.py  logging.py
src/voice_clustering/visualization/: __init__.py  plots.py
tests/: test_config.py  test_metrics.py  test_pipeline_smoke.py  test_subsequences.py
