[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-clustering"
version = "0.1.0"
description = "Unsupervised dimensionality reduction + clustering pipeline for ambulatory voice (neck-accelerometer) signals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gabriel Díaz" }]
keywords = ["umap", "hdbscan", "clustering", "voice", "biosignals", "unsupervised"]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "umap-learn>=0.5.5",
    "hdbscan>=0.8.33",
    "h5py>=3.9",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# GPU acceleration via NVIDIA RAPIDS is installed through conda (see environment.gpu.yml),
# not pip. This extra only covers the pip-installable research add-ons.
search = ["optuna>=3.4"]
notebooks = ["jupyter>=1.0", "nbconvert>=7.0", "nbformat>=5.9", "ipykernel>=6.25"]
dev = ["pytest>=7.4", "ruff>=0.4", "black>=24.0", "mypy>=1.8"]

[project.scripts]
avc-ingest = "voice_clustering.cli:ingest_main"
avc-features = "voice_clustering.cli:features_main"
avc-cluster = "voice_clustering.cli:cluster_main"
avc-validate = "voice_clustering.cli:validate_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
